--- a/ETL_EDA/ETL.ipynb
+++ b/ETL_EDA/ETL.ipynb
@@ -1804,7 +1804,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_movies = pd.read_pickle('../Data/Data_unida.pickle')"
+    "df_movies = pd.read_pickle('../Data/Data_unida.pickle')"
    ]
   },
   {
@@ -2386,6 +2386,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En esta primera version de decidio entrenar el modelo con la columna \"overview\" ya que posee una descripcion mas acertada de la pelicula que el titulo mismo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 98,
    "metadata": {},
@@ -2492,7 +2500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Version entrenanda solo con la columna \"title\""
+    "Version entrenanda solo con la columna \"title\" para la API"
    ]
   },
   {
@@ -2564,45 +2572,6 @@
     "\n",
     "# Guardo el modelo entrenado en un archivo plk\n",
     "joblib.dump(model, \"../Models/tfidf_model.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../Data/list_actors.txt', 'r') as file:\n",
-    "    list_actors = json.load(file)\n",
-    "\n",
-    "with open('../Data/list_directors.txt', 'r') as file:\n",
-    "    list_directors = json.load(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../Data/list_actors.pickle', 'wb') as archivo:\n",
-    "    pickle.dump(list_actors, archivo, protocol=4)\n",
-    "\n",
-    "with open('../Data/list_directors.pickle', 'wb') as archivo:\n",
-    "    pickle.dump(list_directors, archivo, protocol=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../Data/list_actors.pickle', 'rb') as archivo:\n",
-    "    list_actors = pickle.load(archivo)\n",
-    "\n",
-    "with open('../Data/list_directors.pickle', 'rb') as archivo:\n",
-    "    list_directors = pickle.load(archivo)"
    ]
   }
  ],
