--- a/tests_main.ipynb
+++ b/tests_main.ipynb
@@ -15,20 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('./Data/list_actors.pickle', 'rb') as archivo:\n",
-    "    list_actors = pickle.load(archivo)\n",
-    "\n",
-    "with open('./Data/list_directors.pickle', 'rb') as archivo:\n",
-    "    list_directors = pickle.load(archivo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +185,7 @@
        "4              5  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +291,6 @@
        "      <th>popularity</th>\n",
        "      <th>release_date</th>\n",
        "      <th>revenue</th>\n",
-       "      <th>status</th>\n",
        "      <th>title</th>\n",
        "      <th>vote_average</th>\n",
        "      <th>vote_count</th>\n",
@@ -323,7 +309,6 @@
        "      <td>0.693917</td>\n",
        "      <td>1895-06-10</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>Workers Leaving the Lumière Factory</td>\n",
        "      <td>6.2</td>\n",
        "      <td>52.0</td>\n",
@@ -340,7 +325,6 @@
        "      <td>2.032918</td>\n",
        "      <td>1969-01-01</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>Bambi Meets Godzilla</td>\n",
        "      <td>6.5</td>\n",
        "      <td>40.0</td>\n",
@@ -357,7 +341,6 @@
        "      <td>0.106981</td>\n",
        "      <td>2008-01-01</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>Uncounted</td>\n",
        "      <td>9.0</td>\n",
        "      <td>1.0</td>\n",
@@ -374,7 +357,6 @@
        "      <td>0.110946</td>\n",
        "      <td>2009-09-17</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>It's Hard Being Loved by Jerks</td>\n",
        "      <td>7.3</td>\n",
        "      <td>3.0</td>\n",
@@ -391,7 +373,6 @@
        "      <td>0.281609</td>\n",
        "      <td>1993-12-25</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>La estrategia del caracol</td>\n",
        "      <td>7.2</td>\n",
        "      <td>9.0</td>\n",
@@ -417,7 +398,6 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>45433</th>\n",
@@ -425,7 +405,6 @@
        "      <td>0.010588</td>\n",
        "      <td>2013-04-23</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>The Everyday</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -442,7 +421,6 @@
        "      <td>0.249393</td>\n",
        "      <td>2017-06-13</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>Mutafukaz</td>\n",
        "      <td>7.5</td>\n",
        "      <td>2.0</td>\n",
@@ -459,7 +437,6 @@
        "      <td>0.183256</td>\n",
        "      <td>2017-06-23</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>Edith Walks</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -476,7 +453,6 @@
        "      <td>0.000001</td>\n",
        "      <td>1992-01-01</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>The Making of 'The Terminator': A Retrospective</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -493,7 +469,6 @@
        "      <td>0.001202</td>\n",
        "      <td>1956-01-01</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>Released</td>\n",
        "      <td>Silja - nuorena nukkunut</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -506,22 +481,22 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2354 rows × 14 columns</p>\n",
+       "<p>2303 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       budget  popularity release_date  revenue    status  \\\n",
-       "597       0.0    0.693917   1895-06-10      0.0  Released   \n",
-       "1767      0.0    2.032918   1969-01-01      0.0  Released   \n",
-       "2970      0.0    0.106981   2008-01-01      0.0  Released   \n",
-       "3025      0.0    0.110946   2009-09-17      0.0  Released   \n",
-       "3792      0.0    0.281609   1993-12-25      0.0  Released   \n",
-       "...       ...         ...          ...      ...       ...   \n",
-       "45433     0.0    0.010588   2013-04-23      0.0  Released   \n",
-       "45434     0.0    0.249393   2017-06-13      0.0  Released   \n",
-       "45438     0.0    0.183256   2017-06-23      0.0  Released   \n",
-       "45445     0.0    0.000001   1992-01-01      0.0  Released   \n",
-       "45448     0.0    0.001202   1956-01-01      0.0  Released   \n",
+       "       budget  popularity release_date  revenue  \\\n",
+       "597       0.0    0.693917   1895-06-10      0.0   \n",
+       "1767      0.0    2.032918   1969-01-01      0.0   \n",
+       "2970      0.0    0.106981   2008-01-01      0.0   \n",
+       "3025      0.0    0.110946   2009-09-17      0.0   \n",
+       "3792      0.0    0.281609   1993-12-25      0.0   \n",
+       "...       ...         ...          ...      ...   \n",
+       "45433     0.0    0.010588   2013-04-23      0.0   \n",
+       "45434     0.0    0.249393   2017-06-13      0.0   \n",
+       "45438     0.0    0.183256   2017-06-23      0.0   \n",
+       "45445     0.0    0.000001   1992-01-01      0.0   \n",
+       "45448     0.0    0.001202   1956-01-01      0.0   \n",
        "\n",
        "                                                 title  vote_average  \\\n",
        "597                Workers Leaving the Lumière Factory           6.2   \n",
@@ -562,10 +537,10 @@
        "45445                         [Jeff McQueen]   Wednesday              1  \n",
        "45448                         [Jack Witikka]      Sunday              1  \n",
        "\n",
-       "[2354 rows x 14 columns]"
+       "[2303 rows x 13 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
