--- a/ETL_EDA/ETL.ipynb
+++ b/ETL_EDA/ETL.ipynb
@@ -1963,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1987,223 +1987,112 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>belongs_to_collection</th>\n",
        "      <th>budget</th>\n",
        "      <th>genres</th>\n",
-       "      <th>original_language</th>\n",
        "      <th>overview</th>\n",
        "      <th>popularity</th>\n",
-       "      <th>production_companies</th>\n",
-       "      <th>production_countries</th>\n",
-       "      <th>release_date</th>\n",
        "      <th>revenue</th>\n",
-       "      <th>...</th>\n",
-       "      <th>spoken_languages</th>\n",
-       "      <th>status</th>\n",
-       "      <th>tagline</th>\n",
        "      <th>title</th>\n",
        "      <th>vote_average</th>\n",
        "      <th>vote_count</th>\n",
        "      <th>release_year</th>\n",
        "      <th>return</th>\n",
-       "      <th>actors</th>\n",
-       "      <th>directors</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>None</td>\n",
        "      <td>0.0</td>\n",
        "      <td>[Drama, Crime]</td>\n",
-       "      <td>fi</td>\n",
        "      <td>Taisto Kasurinen is a Finnish coal miner whose...</td>\n",
        "      <td>3.860491</td>\n",
-       "      <td>[Villealfa Filmproduction Oy, Finnish Film Fou...</td>\n",
-       "      <td>[Finland]</td>\n",
-       "      <td>1988-10-21</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[suomi, Deutsch]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Ariel</td>\n",
        "      <td>7.1</td>\n",
        "      <td>44.0</td>\n",
        "      <td>1988</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>[Turo Pajala, Susanna Haavisto, Matti Pellonpä...</td>\n",
-       "      <td>[Aki Kaurismäki]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>None</td>\n",
        "      <td>0.0</td>\n",
        "      <td>[Drama, Comedy]</td>\n",
-       "      <td>fi</td>\n",
        "      <td>An episode in the life of Nikander, a garbage ...</td>\n",
        "      <td>2.292110</td>\n",
-       "      <td>[Villealfa Filmproduction Oy]</td>\n",
-       "      <td>[Finland]</td>\n",
-       "      <td>1986-10-16</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[English, suomi, svenska]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Shadows in Paradise</td>\n",
        "      <td>7.1</td>\n",
        "      <td>35.0</td>\n",
        "      <td>1986</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>[Matti Pellonpää, Kati Outinen, Sakari Kuosman...</td>\n",
-       "      <td>[Aki Kaurismäki]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>None</td>\n",
        "      <td>4000000.0</td>\n",
        "      <td>[Crime, Comedy]</td>\n",
-       "      <td>en</td>\n",
        "      <td>It's Ted the Bellhop's first night on the job....</td>\n",
        "      <td>9.026586</td>\n",
-       "      <td>[Miramax Films, A Band Apart]</td>\n",
-       "      <td>[United States of America]</td>\n",
-       "      <td>1995-12-09</td>\n",
        "      <td>4300000.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[English]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>Twelve outrageous guests. Four scandalous requ...</td>\n",
        "      <td>Four Rooms</td>\n",
        "      <td>6.5</td>\n",
        "      <td>539.0</td>\n",
        "      <td>1995</td>\n",
        "      <td>1.075000</td>\n",
-       "      <td>[Tim Roth, Antonio Banderas, Jennifer Beals, M...</td>\n",
-       "      <td>[Allison Anders, Alexandre Rockwell, Robert Ro...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>None</td>\n",
        "      <td>0.0</td>\n",
        "      <td>[Action, Thriller, Crime]</td>\n",
-       "      <td>en</td>\n",
        "      <td>While racing to a boxing match, Frank, Mike, J...</td>\n",
        "      <td>5.538671</td>\n",
-       "      <td>[Universal Pictures, Largo Entertainment, JVC ...</td>\n",
-       "      <td>[Japan, United States of America]</td>\n",
-       "      <td>1993-10-15</td>\n",
        "      <td>12136938.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[English]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>Don't move. Don't whisper. Don't even breathe.</td>\n",
        "      <td>Judgment Night</td>\n",
        "      <td>6.4</td>\n",
        "      <td>79.0</td>\n",
        "      <td>1993</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>[Emilio Estevez, Cuba Gooding Jr., Denis Leary...</td>\n",
-       "      <td>[Stephen Hopkins]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Star Wars Collection</td>\n",
        "      <td>11000000.0</td>\n",
        "      <td>[Adventure, Action, Science Fiction]</td>\n",
-       "      <td>en</td>\n",
        "      <td>Princess Leia is captured and held hostage by ...</td>\n",
        "      <td>42.149697</td>\n",
-       "      <td>[Lucasfilm, Twentieth Century Fox Film Corpora...</td>\n",
-       "      <td>[United States of America]</td>\n",
-       "      <td>1977-05-25</td>\n",
        "      <td>775398007.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>[English]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>A long time ago in a galaxy far, far away...</td>\n",
        "      <td>Star Wars</td>\n",
        "      <td>8.1</td>\n",
        "      <td>6778.0</td>\n",
        "      <td>1977</td>\n",
        "      <td>70.490728</td>\n",
-       "      <td>[Mark Hamill, Harrison Ford, Carrie Fisher, Pe...</td>\n",
-       "      <td>[George Lucas]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  belongs_to_collection      budget                                genres  \\\n",
-       "0                  None         0.0                        [Drama, Crime]   \n",
-       "1                  None         0.0                       [Drama, Comedy]   \n",
-       "2                  None   4000000.0                       [Crime, Comedy]   \n",
-       "3                  None         0.0             [Action, Thriller, Crime]   \n",
-       "4  Star Wars Collection  11000000.0  [Adventure, Action, Science Fiction]   \n",
+       "       budget                                genres  \\\n",
+       "0         0.0                        [Drama, Crime]   \n",
+       "1         0.0                       [Drama, Comedy]   \n",
+       "2   4000000.0                       [Crime, Comedy]   \n",
+       "3         0.0             [Action, Thriller, Crime]   \n",
+       "4  11000000.0  [Adventure, Action, Science Fiction]   \n",
        "\n",
-       "  original_language                                           overview  \\\n",
-       "0                fi  Taisto Kasurinen is a Finnish coal miner whose...   \n",
-       "1                fi  An episode in the life of Nikander, a garbage ...   \n",
-       "2                en  It's Ted the Bellhop's first night on the job....   \n",
-       "3                en  While racing to a boxing match, Frank, Mike, J...   \n",
-       "4                en  Princess Leia is captured and held hostage by ...   \n",
+       "                                            overview  popularity      revenue  \\\n",
+       "0  Taisto Kasurinen is a Finnish coal miner whose...    3.860491          0.0   \n",
+       "1  An episode in the life of Nikander, a garbage ...    2.292110          0.0   \n",
+       "2  It's Ted the Bellhop's first night on the job....    9.026586    4300000.0   \n",
+       "3  While racing to a boxing match, Frank, Mike, J...    5.538671   12136938.0   \n",
+       "4  Princess Leia is captured and held hostage by ...   42.149697  775398007.0   \n",
        "\n",
-       "   popularity                               production_companies  \\\n",
-       "0    3.860491  [Villealfa Filmproduction Oy, Finnish Film Fou...   \n",
-       "1    2.292110                      [Villealfa Filmproduction Oy]   \n",
-       "2    9.026586                      [Miramax Films, A Band Apart]   \n",
-       "3    5.538671  [Universal Pictures, Largo Entertainment, JVC ...   \n",
-       "4   42.149697  [Lucasfilm, Twentieth Century Fox Film Corpora...   \n",
-       "\n",
-       "                production_countries release_date      revenue  ...  \\\n",
-       "0                          [Finland]   1988-10-21          0.0  ...   \n",
-       "1                          [Finland]   1986-10-16          0.0  ...   \n",
-       "2         [United States of America]   1995-12-09    4300000.0  ...   \n",
-       "3  [Japan, United States of America]   1993-10-15   12136938.0  ...   \n",
-       "4         [United States of America]   1977-05-25  775398007.0  ...   \n",
-       "\n",
-       "            spoken_languages    status  \\\n",
-       "0           [suomi, Deutsch]  Released   \n",
-       "1  [English, suomi, svenska]  Released   \n",
-       "2                  [English]  Released   \n",
-       "3                  [English]  Released   \n",
-       "4                  [English]  Released   \n",
-       "\n",
-       "                                             tagline                title  \\\n",
-       "0                                                NaN                Ariel   \n",
-       "1                                                NaN  Shadows in Paradise   \n",
-       "2  Twelve outrageous guests. Four scandalous requ...           Four Rooms   \n",
-       "3     Don't move. Don't whisper. Don't even breathe.       Judgment Night   \n",
-       "4       A long time ago in a galaxy far, far away...            Star Wars   \n",
-       "\n",
-       "  vote_average  vote_count  release_year     return  \\\n",
-       "0          7.1        44.0          1988   0.000000   \n",
-       "1          7.1        35.0          1986   0.000000   \n",
-       "2          6.5       539.0          1995   1.075000   \n",
-       "3          6.4        79.0          1993   0.000000   \n",
-       "4          8.1      6778.0          1977  70.490728   \n",
-       "\n",
-       "                                              actors  \\\n",
-       "0  [Turo Pajala, Susanna Haavisto, Matti Pellonpä...   \n",
-       "1  [Matti Pellonpää, Kati Outinen, Sakari Kuosman...   \n",
-       "2  [Tim Roth, Antonio Banderas, Jennifer Beals, M...   \n",
-       "3  [Emilio Estevez, Cuba Gooding Jr., Denis Leary...   \n",
-       "4  [Mark Hamill, Harrison Ford, Carrie Fisher, Pe...   \n",
-       "\n",
-       "                                           directors  \n",
-       "0                                   [Aki Kaurismäki]  \n",
-       "1                                   [Aki Kaurismäki]  \n",
-       "2  [Allison Anders, Alexandre Rockwell, Robert Ro...  \n",
-       "3                                  [Stephen Hopkins]  \n",
-       "4                                     [George Lucas]  \n",
-       "\n",
-       "[5 rows x 21 columns]"
+       "                 title  vote_average  vote_count  release_year     return  \n",
+       "0                Ariel           7.1        44.0          1988   0.000000  \n",
+       "1  Shadows in Paradise           7.1        35.0          1986   0.000000  \n",
+       "2           Four Rooms           6.5       539.0          1995   1.075000  \n",
+       "3       Judgment Night           6.4        79.0          1993   0.000000  \n",
+       "4            Star Wars           8.1      6778.0          1977  70.490728  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
