--- a/ETL_EDA/ETL.ipynb
+++ b/ETL_EDA/ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1800,11 +1800,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>belongs_to_collection</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>original_language</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>production_companies</th>\n",
+       "      <th>production_countries</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>...</th>\n",
+       "      <th>spoken_languages</th>\n",
+       "      <th>status</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>title</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>release_year</th>\n",
+       "      <th>return</th>\n",
+       "      <th>actors</th>\n",
+       "      <th>directors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[Drama, Crime]</td>\n",
+       "      <td>fi</td>\n",
+       "      <td>Taisto Kasurinen is a Finnish coal miner whose...</td>\n",
+       "      <td>3.860491</td>\n",
+       "      <td>[Villealfa Filmproduction Oy, Finnish Film Fou...</td>\n",
+       "      <td>[Finland]</td>\n",
+       "      <td>1988-10-21</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[suomi, Deutsch]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ariel</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>[Turo Pajala, Susanna Haavisto, Matti Pellonpä...</td>\n",
+       "      <td>[Aki Kaurismäki]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>None</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[Drama, Comedy]</td>\n",
+       "      <td>fi</td>\n",
+       "      <td>An episode in the life of Nikander, a garbage ...</td>\n",
+       "      <td>2.292110</td>\n",
+       "      <td>[Villealfa Filmproduction Oy]</td>\n",
+       "      <td>[Finland]</td>\n",
+       "      <td>1986-10-16</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[English, suomi, svenska]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Shadows in Paradise</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1986</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>[Matti Pellonpää, Kati Outinen, Sakari Kuosman...</td>\n",
+       "      <td>[Aki Kaurismäki]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>None</td>\n",
+       "      <td>4000000.0</td>\n",
+       "      <td>[Crime, Comedy]</td>\n",
+       "      <td>en</td>\n",
+       "      <td>It's Ted the Bellhop's first night on the job....</td>\n",
+       "      <td>9.026586</td>\n",
+       "      <td>[Miramax Films, A Band Apart]</td>\n",
+       "      <td>[United States of America]</td>\n",
+       "      <td>1995-12-09</td>\n",
+       "      <td>4300000.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[English]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Twelve outrageous guests. Four scandalous requ...</td>\n",
+       "      <td>Four Rooms</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>539.0</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>1.075</td>\n",
+       "      <td>[Tim Roth, Antonio Banderas, Jennifer Beals, M...</td>\n",
+       "      <td>[Allison Anders, Alexandre Rockwell, Robert Ro...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  belongs_to_collection     budget           genres original_language  \\\n",
+       "0                  None        0.0   [Drama, Crime]                fi   \n",
+       "1                  None        0.0  [Drama, Comedy]                fi   \n",
+       "2                  None  4000000.0  [Crime, Comedy]                en   \n",
+       "\n",
+       "                                            overview  popularity  \\\n",
+       "0  Taisto Kasurinen is a Finnish coal miner whose...    3.860491   \n",
+       "1  An episode in the life of Nikander, a garbage ...    2.292110   \n",
+       "2  It's Ted the Bellhop's first night on the job....    9.026586   \n",
+       "\n",
+       "                                production_companies  \\\n",
+       "0  [Villealfa Filmproduction Oy, Finnish Film Fou...   \n",
+       "1                      [Villealfa Filmproduction Oy]   \n",
+       "2                      [Miramax Films, A Band Apart]   \n",
+       "\n",
+       "         production_countries release_date    revenue  ...  \\\n",
+       "0                   [Finland]   1988-10-21        0.0  ...   \n",
+       "1                   [Finland]   1986-10-16        0.0  ...   \n",
+       "2  [United States of America]   1995-12-09  4300000.0  ...   \n",
+       "\n",
+       "            spoken_languages    status  \\\n",
+       "0           [suomi, Deutsch]  Released   \n",
+       "1  [English, suomi, svenska]  Released   \n",
+       "2                  [English]  Released   \n",
+       "\n",
+       "                                             tagline                title  \\\n",
+       "0                                                NaN                Ariel   \n",
+       "1                                                NaN  Shadows in Paradise   \n",
+       "2  Twelve outrageous guests. Four scandalous requ...           Four Rooms   \n",
+       "\n",
+       "  vote_average  vote_count  release_year  return  \\\n",
+       "0          7.1        44.0          1988   0.000   \n",
+       "1          7.1        35.0          1986   0.000   \n",
+       "2          6.5       539.0          1995   1.075   \n",
+       "\n",
+       "                                              actors  \\\n",
+       "0  [Turo Pajala, Susanna Haavisto, Matti Pellonpä...   \n",
+       "1  [Matti Pellonpää, Kati Outinen, Sakari Kuosman...   \n",
+       "2  [Tim Roth, Antonio Banderas, Jennifer Beals, M...   \n",
+       "\n",
+       "                                           directors  \n",
+       "0                                   [Aki Kaurismäki]  \n",
+       "1                                   [Aki Kaurismäki]  \n",
+       "2  [Allison Anders, Alexandre Rockwell, Robert Ro...  \n",
+       "\n",
+       "[3 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_movies = pd.read_pickle('../Data/Data_unida.pickle')"
+    "df_movies = pd.read_pickle('../Data/Data_unida.pickle')\n",
+    "df_movies.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['belongs_to_collection', 'budget', 'genres', 'original_language',\n",
+       "       'overview', 'popularity', 'production_companies',\n",
+       "       'production_countries', 'release_date', 'revenue', 'runtime',\n",
+       "       'spoken_languages', 'status', 'tagline', 'title', 'vote_average',\n",
+       "       'vote_count', 'release_year', 'return', 'actors', 'directors'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_movies.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 45451 entries, 0 to 45450\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column                 Non-Null Count  Dtype         \n",
+      "---  ------                 --------------  -----         \n",
+      " 0   belongs_to_collection  4497 non-null   object        \n",
+      " 1   budget                 45451 non-null  float64       \n",
+      " 2   genres                 43067 non-null  object        \n",
+      " 3   original_language      45440 non-null  object        \n",
+      " 4   overview               44510 non-null  object        \n",
+      " 5   popularity             45451 non-null  float64       \n",
+      " 6   production_companies   33634 non-null  object        \n",
+      " 7   production_countries   39232 non-null  object        \n",
+      " 8   release_date           45451 non-null  datetime64[ns]\n",
+      " 9   revenue                45451 non-null  float64       \n",
+      " 10  runtime                45205 non-null  float64       \n",
+      " 11  spoken_languages       41677 non-null  object        \n",
+      " 12  status                 45371 non-null  object        \n",
+      " 13  tagline                20425 non-null  object        \n",
+      " 14  title                  45451 non-null  object        \n",
+      " 15  vote_average           45451 non-null  float64       \n",
+      " 16  vote_count             45451 non-null  float64       \n",
+      " 17  release_year           45451 non-null  int64         \n",
+      " 18  return                 45451 non-null  float64       \n",
+      " 19  actors                 43097 non-null  object        \n",
+      " 20  directors              44728 non-null  object        \n",
+      "dtypes: datetime64[ns](1), float64(7), int64(1), object(12)\n",
+      "memory usage: 7.3+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_movies.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "original_language, year, belongs_to_collection, runtime, revunue, production_companies, "
    ]
   },
   {
@@ -1820,7 +2073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1830,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1840,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1853,29 +2106,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "budget                  float64\n",
-       "popularity              float64\n",
-       "release_date     datetime64[ns]\n",
-       "revenue                 float64\n",
-       "title                    object\n",
-       "vote_average            float64\n",
-       "vote_count              float64\n",
-       "release_year              int64\n",
-       "return                  float64\n",
-       "actors                   object\n",
-       "directors                object\n",
-       "release_day              object\n",
-       "release_month             int64\n",
+       "belongs_to_collection            object\n",
+       "budget                          float64\n",
+       "genres                           object\n",
+       "original_language                object\n",
+       "overview                         object\n",
+       "popularity                      float64\n",
+       "production_companies             object\n",
+       "production_countries             object\n",
+       "release_date             datetime64[ns]\n",
+       "revenue                         float64\n",
+       "runtime                         float64\n",
+       "spoken_languages                 object\n",
+       "tagline                          object\n",
+       "title                            object\n",
+       "vote_average                    float64\n",
+       "vote_count                      float64\n",
+       "release_year                      int64\n",
+       "return                          float64\n",
+       "actors                           object\n",
+       "directors                        object\n",
+       "release_day                      object\n",
+       "release_month                     int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1886,29 +2148,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "budget              0\n",
-       "popularity          0\n",
-       "release_date        0\n",
-       "revenue             0\n",
-       "title               0\n",
-       "vote_average        0\n",
-       "vote_count          0\n",
-       "release_year        0\n",
-       "return              0\n",
-       "actors           2303\n",
-       "directors         698\n",
-       "release_day         0\n",
-       "release_month       0\n",
+       "belongs_to_collection    40534\n",
+       "budget                       0\n",
+       "genres                    2327\n",
+       "original_language           10\n",
+       "overview                   907\n",
+       "popularity                   0\n",
+       "production_companies     11579\n",
+       "production_countries      6089\n",
+       "release_date                 0\n",
+       "revenue                      0\n",
+       "runtime                    240\n",
+       "spoken_languages          3702\n",
+       "tagline                  24695\n",
+       "title                        0\n",
+       "vote_average                 0\n",
+       "vote_count                   0\n",
+       "release_year                 0\n",
+       "return                       0\n",
+       "actors                    2303\n",
+       "directors                  698\n",
+       "release_day                  0\n",
+       "release_month                0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
