--- a/ETL_EDA/ETL.ipynb
+++ b/ETL_EDA/ETL.ipynb
@@ -1986,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2000,7 +2000,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2011,7 +2011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2057,7 +2057,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "original_language, year, belongs_to_collection, runtime, revunue, production_companies, "
+    "original_language, release_year, belongs_to_collection, runtime, revunue, production_companies, "
    ]
   },
   {
@@ -2068,7 +2068,7 @@
    "source": [
     "# Elimino columnas que no son consultadas por la api para reducir el peso del archivo pickle \n",
     "df_movies.drop(['belongs_to_collection','genres','original_language','overview','production_companies',\n",
-    "                'production_countries','runtime','spoken_languages','tagline',],axis=1,inplace=True)"
+    "                'production_countries','runtime','spoken_languages','tagline'],axis=1,inplace=True)"
    ]
   },
   {
@@ -2093,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2132,12 +2132,10 @@
        "return                          float64\n",
        "actors                           object\n",
        "directors                        object\n",
-       "release_day                      object\n",
-       "release_month                     int64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2148,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2174,12 +2172,10 @@
        "return                       0\n",
        "actors                    2303\n",
        "directors                  698\n",
-       "release_day                  0\n",
-       "release_month                0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
