--- a/tests_main.ipynb
+++ b/tests_main.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "4                                     [George Lucas]  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,20 +345,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'idioma': 'United States of America', 'cantidad': 0}\n"
+      "{'idioma': 'en', 'cantidad': 31938}\n"
      ]
     }
    ],
    "source": [
+    "# Esta funcion pide como parametro un nombre corto de un idioma y retorna un diccionario con el idioma ingresado y la cantidad de peliculas en ese idioma\n",
     "def peliculas_idioma(idioma:str):\n",
-    "    respuesta = df_movie[df_movie['original_language'] == idioma]['original_language'].count()\n",
+    "    if not isinstance(idioma, str):\n",
+    "        return 'Debe ingresar un texto'\n",
+    "    else:\n",
+    "        respuesta = df_movie[df_movie['original_language'] == idioma]['original_language'].count()\n",
     "\n",
     "    return {'idioma':idioma, 'cantidad':respuesta}\n",
     "\n",
@@ -367,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -379,18 +383,24 @@
     }
    ],
    "source": [
+    "# esta funcion pide como parametro en nombre de una pelicula y retorna un diccionario con en nombre de la pelicula, duracion en minutos y el año de estreno\n",
     "def peliculas_duracion(pelicula:str):\n",
-    "    df = df_movie[df_movie['title'] == pelicula][['runtime','release_year']]\n",
-    "    respuesta = df['runtime'][0]\n",
-    "    anio = df['release_year'][0]\n",
-    "    return {'pelicula':pelicula, 'duracion':str(respuesta), 'anio':str(anio)}\n",
+    "    if not isinstance(pelicula, str):\n",
+    "        return 'Debe ingresar un texto'\n",
+    "    elif not (df_movie['title'] == pelicula).any().any():\n",
+    "        return 'La pelicula no se encuentra en la base de datos'\n",
+    "    else:\n",
+    "        df = df_movie[df_movie['title'] == pelicula][['runtime','release_year']]\n",
+    "        respuesta = df['runtime'][0]\n",
+    "        anio = df['release_year'][0]\n",
+    "        return {'pelicula':pelicula, 'duracion':str(respuesta), 'anio':str(anio)}\n",
     "\n",
     "print(peliculas_duracion('Ariel'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -402,20 +412,26 @@
     }
    ],
    "source": [
+    "# Esta funcion pide como parametro una franquicia y retorna un diccionario con el nombre de la franquicia, cantidad de peliculas que tiene la franquicia, ganancia total (return), y granancia promedio.\n",
     "def franquicia(franquicia:str):\n",
-    "    df = df_movie[df_movie['belongs_to_collection'] == franquicia]\n",
-    "    cantidad = df.shape[0]\n",
-    "    ganancia_total = df['return'].sum()\n",
-    "    promedio = ganancia_total/cantidad\n",
+    "    if not isinstance(franquicia, str):\n",
+    "        return 'Debe ingresar un texto'\n",
+    "    elif not (df_movie['belongs_to_collection'] == franquicia).any().any():\n",
+    "        return 'La pelicula no se encuentra en la base de datos'\n",
+    "    else:\n",
+    "        df = df_movie[df_movie['belongs_to_collection'] == franquicia]\n",
+    "        cantidad = df.shape[0]\n",
+    "        ganancia_total = df['return'].sum()\n",
+    "        promedio = ganancia_total/cantidad\n",
     "\n",
-    "    return {'franquicia':franquicia, 'cantidad':str(cantidad), 'ganancia_total': str(ganancia_total), 'ganancia_promedio':str(promedio)}\n",
+    "        return {'franquicia':franquicia, 'cantidad':str(cantidad), 'ganancia_total': str(ganancia_total), 'ganancia_promedio':str(promedio)}\n",
     "\n",
     "print(franquicia('Star Wars Collection'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -427,37 +443,45 @@
     }
    ],
    "source": [
+    "# Esta funcion pide como parametro un nombre de pais y retorna un diccionario con el nombre del pais y la cantidad de peliculas que se filmaron en ese pais.\n",
     "def peliculas_pais(pais:str):\n",
-    "    count = 0\n",
-    "    for country_list in df_movie['production_countries']:\n",
-    "        if country_list:\n",
-    "            count += country_list.count(pais)\n",
-    "    \n",
-    "    return {'pais':pais, 'cantidad':count}\n",
+    "    if not isinstance(pais, str):\n",
+    "        return 'Debe ingresar un texto'\n",
+    "    else:\n",
+    "        count = 0\n",
+    "        for country_list in df_movie['production_countries']:\n",
+    "            if country_list:\n",
+    "                count += country_list.count(pais)\n",
+    "        \n",
+    "        return {'pais':pais, 'cantidad':count}\n",
     "\n",
     "print(peliculas_pais('United States of America'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'productora': 'Lucasfilm', 'revenue_total': 405.7109784258721, 'cantidad': 29}\n"
+      "{'productora': 'Lucasfilm', 'revenue_total': 9898421106.0, 'cantidad': 29}\n"
      ]
     }
    ],
    "source": [
+    "# Esta funcion pide como parametro el nombre de una productora y devuelve un diccionario con el nombre de la productora, recaudacion total (revenue) y cantidad de peliculas\n",
     "def productoras_exitosas(productora:str):\n",
-    "    temp_df = df_movie[df_movie['production_companies'].apply(lambda companies: productora in companies if isinstance(companies, list) else False)]\n",
-    "    cantidad = temp_df.shape[0]\n",
-    "    revenue_total = temp_df['return'].sum()\n",
+    "    if not isinstance(productora, str):\n",
+    "        return 'Debe ingresar un texto'\n",
+    "    else:\n",
+    "        temp_df = df_movie[df_movie['production_companies'].apply(lambda companies: productora in companies if isinstance(companies, list) else False)]\n",
+    "        cantidad = temp_df.shape[0]\n",
+    "        revenue_total = temp_df['revenue'].sum()\n",
     "\n",
-    "    return {'productora':productora, 'revenue_total': revenue_total,'cantidad':cantidad}\n",
+    "        return {'productora':productora, 'revenue_total': revenue_total,'cantidad':cantidad}\n",
     "\n",
     "print(productoras_exitosas('Lucasfilm'))"
    ]
@@ -920,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +974,7 @@
        "{'lista recomendada': \"['Un marido de ida y vuelta', 'The Sandwich Man', 'Chernobyl Diaries', 'Friday the 13th: A New Beginning', 'Aftershock']\"}"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
