--- a/ETL_EDA/EDA.ipynb
+++ b/ETL_EDA/EDA.ipynb
@@ -9,7 +9,6 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from wordcloud import WordCloud\n",
-    "import numpy as np\n",
     "import seaborn as sns\n",
     "sns.set()\n",
     "import missingno as msno"
@@ -598,6 +597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Separa las columnas con datos numericos de los categoricos en distintos dataframes.\n",
     "df_numerical = df[['budget','popularity','revenue','runtime','vote_average','vote_count','return']]\n",
     "df_categorical = df[['title','directors']]"
    ]
@@ -833,8 +833,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Todas las columnas tiene outiers y a excepcion de \"vote_average\" que tambien los tiene, sus valores no estan demaciado alejados entre si.\n",
-    "Proceso a analizar las columnas con outliers"
+    "Todas las columnas tiene outiers y a excepcion de \"vote_average\" que tambien los tiene, pero sus valores no estan demaciado alejados entre si."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se procede a analizar las columnas con outliers:"
    ]
   },
   {
@@ -848,7 +854,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "runtime o duracion de la pelicula en minutos"
+    "Columna \"runtime\" o duracion de la pelicula en minutos"
    ]
   },
   {
@@ -868,6 +874,7 @@
     }
    ],
    "source": [
+    "# muestra el valor maximo de la columa 'runtime' del dataframe 'df'\n",
     "df['runtime'].max()"
    ]
   },
@@ -1318,7 +1325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Buscando por internet algunos de los nombres encontramos que las de mayor duracion corresponden a series de television o a trilogias completas de peloculas por lo que no se modificaran los valores."
+    "Buscando por internet algunos de los nombres encontramos que las de mayor duracion corresponden a series de television o a trilogias completas de peliculas por lo que no se modificaran los valores."
    ]
   },
   {
@@ -1338,6 +1345,7 @@
     }
    ],
    "source": [
+    "# Muestra el valor minimo de la columna 'runtime'.\n",
     "df['runtime'].min()"
    ]
   },
@@ -1366,6 +1374,13 @@
    ],
    "source": [
     "df['popularity'].max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Columna popularity"
    ]
   },
   {
@@ -1563,6 +1578,13 @@
    "source": [
     "# se filtran las filas donde los volores de la columna \"popularity\" sean mayores a 100 ya que es el valor maximo segun la pagina web TMDB\n",
     "df[df['popularity'] > 100][['title','popularity','release_year','runtime']].sort_values('popularity', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Segun la pagina web de TMDB la popularidad maxima es de 100 por lo que los valores mayores son datos atipicos."
    ]
   },
   {
